src/render/renderers/opengl/renderer/renderer_p.h
@@ -207,7 +207,7 @@ public:
 #if defined(QT_BUILD_INTERNAL)
     void clearDirtyBits(BackendNodeDirtySet changes) override;
 #endif
-    bool shouldRender() override;
+    bool shouldRender() const override;
     void skipNextFrame() override;
 
     QVector<Qt3DCore::QAspectJobPtr> preRenderingJobs() override;
